--- a/.github/workflows/dynamic-workflow-call.yaml
+++ b/.github/workflows/dynamic-workflow-call.yaml
@@ -9,5 +9,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo hello
-
+      - uses: actions/checkout
       - uses: ./.github/workflows/callable-workflow.yaml
