--- a/.github/workflows/dynamic-workflow-call.yaml
+++ b/.github/workflows/dynamic-workflow-call.yaml
@@ -9,5 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo hello
-      - uses: actions/checkout@v4
-      - uses: ./.github/workflows/callable-workflow.yaml
+    
+  call:
+    uses:  ./.github/workflows/callable-workflow.yaml
