Fix callable workflows

--- a/.github/workflows/callable-workflow.yaml
+++ b/.github/workflows/callable-workflow.yaml
@@ -5,4 +5,4 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - run: hello from callable-workflow
+      - run: echo hello from callable-workflow
