Dynamically call workflow

--- a/.github/workflows/dynamic-workflow-call.yaml
+++ b/.github/workflows/dynamic-workflow-call.yaml
@@ -12,3 +12,6 @@ jobs:
     
   call:
     uses:  ./.github/workflows/callable-workflow.yaml
+  
+  dynamic-call:
+    uses: ${{ inputs.workflow_name }}
